exports[`test NoRows doesn't render it there are rows 1`] = `null`;

exports[`test NoRows renders a loading message 1`] = `
<div
  className="alert alert-info text-center">
  Loading...
</div>
`;

exports[`test NoRows renders an error message 1`] = `
<div
  className="alert alert-danger text-center">
  Too bad!
</div>
`;

exports[`test NoRows renders correctly 1`] = `
<div
  className="alert alert-warning text-center">
  No items to show
</div>
`;

exports[`test NoRows renders correctly a custom message 1`] = `
<div
  className="alert alert-warning text-center">
  No items to show! Check back later!
</div>
`;
